Increase specificity of css overflow: hidden rule so it doesn't clip kebab dropdown menu Fixes Bug https://bugzilla.redhat.com/show_bug.cgi?id=1460153

--- a/app/styles/_overview.less
+++ b/app/styles/_overview.less
@@ -267,8 +267,10 @@
     &.deployment-in-progress {
       // So animation offsets are hidden when sliding in horizontally
       // Only use this style when a deployment is in progress so that chart
-      // tooltips aren't clipped.
-      overflow:hidden;
+      // tooltips aren't clipped and only when expanded(.active), so that kebab dropdown menu isn't clipped.
+      &.active {
+        overflow: hidden;
+      }
       .list-pf-expansion {
         @media (max-width: @screen-xs-max) {
           overflow: hidden; // Hidden when sliding in vertically
